--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,7 +1,6 @@
 FROM ubuntu:16.04
 
-RUN apt-get update -y && \
-    apt-get install -y python-pip python-dev
+RUN apt-get install -y python-pip python-dev
 
 # We copy just the requirements.txt first to leverage Docker cache
 COPY ./requirements.txt /app/requirements.txt
